# Stellar-Privacy

./: .gcloudignore  .gitignore  Cargo.toml  LICENSE  MVP.md  Makefile  NOTICE  POSEIDON.md  README.md  SRS.md  cloudbuild.yaml  shield-hero.html
backend/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/scripts/: seed-register-state.mjs
backend/src/: config.ts  index.ts
circuits/: deposit.circom  mint.circom  register.circom  transfer.circom  withdraw.circom
circuits/modules/: jubjub.circom  jubjub_elgamal.circom  range.circom  sha256_truncated.circom
contracts/encrypted_token/: Cargo.toml
contracts/encrypted_token/src/: events.rs  lib.rs  poseidon_circom.rs  test.rs  verifier_contract.rs
contracts/groth16_verifier/: Cargo.toml
contracts/groth16_verifier/src/: lib.rs
frontend/: README.md  old-hero.txt  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/hooks/: useFreighter.ts
frontend/lib/: decrypt.ts  mock-data.ts  shield-api-config.ts  shield-protocol.ts  stellar.ts  transactions.ts  user-messages.ts  utils.ts
frontend/providers/: ShieldProvider.tsx
frontend/scripts/: extract-shield-hero.mjs
frontend/types/: index.ts
run/: cloudrun-env.yaml  setup-gcs-register-bucket.ps1
scripts/: build-circuits.sh  generate-bindings.sh
sdk/: package-lock.json  package.json  tsconfig.json
sdk/scripts/: bootstrap-env.cjs  bootstrap-env.ts  check-registration.ts  decrypt-balance.ts  deploy-native-bn254.ts  fetch-contract-events.ts  frontend-protocol.ts  tx-helpers.ts  (+5 more)
(+56 files in other folders)
