[workspace]
resolver = "2"
members = [
    "contracts/encrypted_token",
    "contracts/groth16_verifier",
]

[workspace.package]
rust-version = "1.84.0"
edition = "2021"

[workspace.dependencies]
soroban-sdk = { version = "25.0.0", features = ["hazmat-crypto"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
