[package]
name = "groth16_verifier"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
soroban-sdk = { version = "25.3.1", features = ["hazmat-crypto"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
